# caffeinate

./: .gitignore  CLAUDE.md  Cargo.toml  QONTEXT_PLAN.md  README.md  RUST_PLAN.md  ce.toml.example  criteria.txt  dataset.yaml  generate_bench2.py  justfile  knowledge.md
.claude/: settings.local.json
EnterpriseBench/: tasks.jsonl
EnterpriseBench/Customer_Relation_Management/Product Sentiment/: product_sentiment.json
EnterpriseBench/Enterprise_mail_system/: emails.json
EnterpriseBench/Inazuma_Overflow/: overflow.json
EnterpriseBench2/: .gitattributes
EnterpriseBench2/Business_and_Management/: clients.json  vendors.json
EnterpriseBench2/Customer_Relation_Management/: customers.json  products.json  sales.json
EnterpriseBench2/Customer_Relation_Management/Customer Support/: customer_support_chats.json
EnterpriseBench2/Customer_Relation_Management/Product Sentiment/: product_sentiment.json
EnterpriseBench2/Enterprise Social Platform/: posts.json
EnterpriseBench2/Enterprise_mail_system/: emails.json
EnterpriseBench2/Human_Resource_Management/Employees/: employees.json
EnterpriseBench2/IT_Service_Management/: it_tickets.json
EnterpriseBench2/Inazuma_Overflow/: overflow.json
crates/api/: Cargo.toml
crates/api/src/: lib.rs  main.rs  routes.rs
crates/builder/: Cargo.toml
crates/builder/src/: groups.rs  lib.rs  main.rs  maxi.rs  relate.rs  render.rs  source.rs
crates/builder/src/providers/: csv.rs  json.rs  mod.rs
crates/builder/tests/: enterprisebench.rs
crates/ce-adapters/: Cargo.toml
crates/ce-adapters/src/: csv_adapter.rs  json.rs  lib.rs  pdf.rs  txt.rs
crates/ce-api/: Cargo.toml
crates/ce-api/src/: ask.rs  lib.rs  md_cache.rs  render.rs
crates/ce-api/static/: browse.html  conflicts.html  index.html  resolutions.html
crates/ce-cli/: Cargo.toml
crates/ce-cli/src/: main.rs
crates/ce-core/: Cargo.toml
crates/ce-core/src/: adapter.rs  document.rs  entity.rs  fact.rs  lib.rs
crates/ce-engine/: Cargo.toml
crates/ce-engine/src/: lib.rs
crates/ce-extract/: Cargo.toml
crates/ce-extract/src/: extract.rs  lib.rs  schema.rs
crates/ce-llm/: Cargo.toml
crates/ce-llm/src/: chat.rs  config.rs  embed.rs  error.rs  lib.rs  stats.rs
crates/ce-resolve/: Cargo.toml
crates/ce-resolve-entity/: Cargo.toml
crates/ce-resolve-entity/src/: alias.rs  embed.rs  lib.rs  prefilter.rs  reconcile.rs
crates/ce-resolve/src/: cardinality.rs  lib.rs
crates/ce-search/: Cargo.toml
crates/ce-search/src/: lib.rs
crates/ce-search/tests/: bench_index.rs
crates/ce-store/: Cargo.toml
crates/ce-store/migrations/: 0001_init.sql  0002_aliases_embeddings.sql
crates/ce-store/src/: lib.rs
crates/ce-views/: Cargo.toml
crates/ce-views/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: ids.rs  lib.rs  model.rs  seed.rs  state.rs
crates/fs/: Cargo.toml
crates/fs/src/: fuse.rs  lib.rs  main.rs
crates/qontext/: Cargo.toml
crates/qontext/src/: main.rs
voice-agent/: .env.example  .gitignore  DISCORD_SETUP.md  HANDOFF_DISCORD.md  README.md  demo_conversations.md  discord_bot.py  main.py  mock_questions.json  pyproject.toml  qontext_tools.py  test_harness.py
voice-agent/static/: index.html
voice-agent/tests/: test_bridge.py  test_bridge_full.py  test_short_utterance.py
