[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/fs",
    "crates/builder",
    "crates/api",
    "crates/qontext",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
# shared
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"

# state: lock-free, eventually-consistent map. many readers, one writer.
evmap = "10"
# fallback in case evmap API surprises us
arc-swap = "1"

# fs
fuser = "0.14"

# builder
notify = "6"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# api
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# internal
qontext-core = { path = "crates/core" }
qontext-fs = { path = "crates/fs" }
qontext-builder = { path = "crates/builder" }
qontext-api = { path = "crates/api" }

[profile.dev]
opt-level = 0
debug = 1

[profile.release]
opt-level = 3
lto = "thin"
