[workspace]
resolver = "2"
members = [
    "crates/ce-core",
    "crates/ce-adapters",
    "crates/ce-extract",
    "crates/ce-store",
    "crates/ce-resolve",
    "crates/ce-views",
    "crates/ce-search",
    "crates/ce-engine",
    "crates/ce-api",
    "crates/ce-cli",
    "crates/ce-llm",
    "crates/ce-resolve-entity",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
ce-core = { path = "crates/ce-core" }
ce-adapters = { path = "crates/ce-adapters" }
ce-extract = { path = "crates/ce-extract" }
ce-store = { path = "crates/ce-store" }
ce-resolve = { path = "crates/ce-resolve" }
ce-views = { path = "crates/ce-views" }
ce-search = { path = "crates/ce-search" }
ce-engine = { path = "crates/ce-engine" }
ce-api = { path = "crates/ce-api" }
ce-llm = { path = "crates/ce-llm" }
ce-resolve-entity = { path = "crates/ce-resolve-entity" }

axum = "0.7"
tower-http = { version = "0.5", features = ["trace", "cors"] }

tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
ignore = "0.4"
csv = "1.3"
futures = "0.3"
pdf-extract = "0.7"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
sha2 = "0.10"
hex = "0.4"
dotenvy = "0.15"
minijinja = "2"
tantivy = "0.22"
petgraph = "0.6"
rayon = "1.10"
tempfile = "3"
toml = "0.8"
