[package]
name = "ce-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ce-core.workspace = true
async-trait.workspace = true
serde_json.workspace = true
csv.workspace = true
tokio = { workspace = true }
tracing.workspace = true
pdf-extract.workspace = true
