[package]
name = "ce-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ce-core.workspace = true
ce-store.workspace = true
ce-search.workspace = true
ce-views.workspace = true
ce-llm.workspace = true
reqwest.workspace = true
axum.workspace = true
tower-http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
