[package]
name = "ce-extract"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ce-core.workspace = true
ce-llm.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
async-trait.workspace = true
thiserror.workspace = true
