[package]
name = "ce-llm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
reqwest.workspace = true
tracing.workspace = true
sha2.workspace = true
hex.workspace = true
toml.workspace = true
tokio.workspace = true
fastrand = "2"
