[package]
name = "ce-resolve-entity"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ce-core.workspace = true
ce-store.workspace = true
ce-llm.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
async-trait.workspace = true
sha2.workspace = true
hex.workspace = true
rayon.workspace = true
