[package]
name = "ce-search"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ce-core.workspace = true
ce-store.workspace = true
tantivy.workspace = true
petgraph.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
rayon.workspace = true

[dev-dependencies]
tempfile.workspace = true
ce-core.workspace = true
serde_json.workspace = true
