[package]
name = "qontext-core"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
evmap.workspace = true
arc-swap.workspace = true
uuid.workspace = true
chrono.workspace = true
