[package]
name = "qontext"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "qontext"
path = "src/main.rs"

[dependencies]
qontext-core.workspace = true
qontext-fs.workspace = true
qontext-builder.workspace = true
qontext-api.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
dotenvy.workspace = true
